# todolist_db

./: .docker_env  .env_example  .gitignore  .project  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  entrypoint.sh  requirements.txt
.dbeaver/: credentials-config.json  data-sources.json  project-settings.json
.github/workflows/: action.yaml
core/: serializers.py
deploy/: .env_example  docker-compose.yaml  nginx.conf
deploy_locally/: docker-compose.yaml
scr/: .env.txt  pyproject.toml
scr/core/: admin.py
scr/core/migrations/: 0001_initial.py
scr/todolist/: settings.py
todolist/: settings.py  urls.py
todolist/bot/management/commands/: runbot.py
todolist/core/: serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py
todolist/deploy/: docker-compose.yaml  nginx.conf
todolist/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
todolist/todolist/: settings.py  urls.py
