[tool.poetry]
name = "scr"
version = "0.1.0"
description = ""
authors = ["NIK <nikita1z@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
django-environ = "^0.9.0"
psycopg2 = "^2.9.5"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
